--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "tsx watch src/http/server.ts"
   },
+  "engines": {
+    "node": "^20.11.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
